# Vibe_TCG

./: .gitignore  MakeFile  README.md  check-cicd.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_cases.json
.github/workflows/: ci.yml  generate.yml
examples/: complex_scenario.yaml  searching_test_cases.json  sorting_test_cases.json
src/: main.py
src/generators/: __init__.py  base_generator.py  math_generator.py  searching_generator.py  sorting_generator.py
src/utils/: __init__.py  exporter.py  validator.py
templates/: math_template.md  searching_template.md  sorting_template.md
tests/: test_searching_generator.py  test_sorting_generator.py  test_validator.py
